--- a/ENations/appsettings.json
+++ b/ENations/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
     "ConnectionStrings": {
-      "DefaultConnection": "Host=localhost; Database=enations; Username=postgres; Password=admin"
+      "DefaultConnection": "Host=localhost; Database=enations; Username=postgres; Password=Antonio11@"
     }
 
 }
