Feat: UI for CompanyOwners done and some other Views updated.

--- a/ENations/appsettings.json
+++ b/ENations/appsettings.json
@@ -6,8 +6,8 @@
     }
   },
   "AllowedHosts": "*",
-    "ConnectionStrings": {
-      "DefaultConnection": "Host=localhost; Database=enations; Username=postgres; Password=admin"
-    }
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost; Database=enations; Username=postgres; Password=Antonio11@"
+  }
 
 }
